# Coleccion-de-Ejercicios-para-Nociones-Clave

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  main2.h
Proyecto 1/: Estudiante.cpp  Estudiante.h  main2.cpp
Proyecto 1-Ejercio 1 y 2/: Persona.cpp  Persona.h  main2.h
Proyecto 2- Ejercio 3,4,5/: Matematicas.cpp  Matematicas.h  Nuevo.cpp  funciones.cpp  funciones.h  main.cpp
